--- a/nptel_result_system/templates/result.html
+++ b/nptel_result_system/templates/result.html
@@ -81,7 +81,8 @@
 
 
 <!-- Show College Section ONLY if pending -->
-{% if stage == "college_pending" and college_list|length > 0 %}
+
+{% if college_list|length > 0 %}
 
 <br><br>
 
