--- a/nptel_result_system/templates/edit_college.html
+++ b/nptel_result_system/templates/edit_college.html
@@ -45,6 +45,9 @@
 
 <table class="styled-table">
 
+    
+
+
 <tr>
 <th>Roll</th>
 <th>Name</th>
@@ -54,7 +57,10 @@
 
 {% for row in data %}
 <tr>
+{% if unlocked_rolls is not none and row['University Roll Number'] not in unlocked_rolls %}
 
+    readonly
+{% endif %}
 <td>
 {{ row['University Roll Number'] }}
 <input type="hidden" name="roll" value="{{ row['University Roll Number'] }}">
