Added subjects' selection for NPTEL

--- a/nptel_result_system/templates/manage_subjects.html
+++ b/nptel_result_system/templates/manage_subjects.html
@@ -42,7 +42,7 @@
 <hr>
 
 <!-- Excel Upload -->
-<form method="POST" enctype="multipart/form-data" class="form-box">
+<form method="POST" action="/upload_subjects" enctype="multipart/form-data" class="form-box">
 <input type="hidden" name="excel_upload" value="1">
 
 <div class="form-group">
